--- a/login.html
+++ b/login.html
@@ -99,35 +99,76 @@
     button[type="submit"]:hover {
       background: #3a7bd5;
     }
+   
 
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.05); }
       100% { transform: scale(1); }
     }
+.note {
+  text-align: center;
+  font-size: 14px;
+  color: #faf7f7;
+  margin-top: 20px;
+  font-family: 'Segoe UI', sans-serif;
+}
 
-    .note {
-      margin-top: 10px;
-      font-size: 0.9rem;
-      text-align: center;
-      color: #ccc;
+.note a {
+  color: #91adea;
+  font-weight: 600;
+  margin-left: 5px;
+  text-decoration: none;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+.note a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  background-color: #dde1e9;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+}
+
+.note a:hover {
+  color: #e4e5e8;
+}
+
+.note a:hover::after {
+  transform: scaleX(1);
+}
+p {
+      font-family:Georgia, 'Times New Roman', Times, serif;
+      font-style: bold;
+      font-size: 20px;
     }
+   
   </style>
 </head>
 <body>
 
   <img src="https://i.imgur.com/8KlT8jJ.png" alt="Luna Logo" class="logo" />
-  <h1>Luna Login</h1>
+  <h1>Welcome back</h1>
+  <p>LUNA</p>
 
   <form>
     <input type="email" id="email" placeholder="Enter your email" required />
     <input type="password" id="password" placeholder="Enter your password" required />
 
     <button type="button" class="voice-btn" onclick="startVoiceLogin()">🎙 Voice Login</button>
-    <button type="submit">Login</button>
-    <p class="note">Don’t have an account? Sign up</p>
-  </form>
+   <button type="submit">login</button>
+  <p class="note">
+  Don't have an account yet?
+  <a href="signup.html">Sign up</a>
+</p>
 
+  <form>
   <script>
     function startVoiceLogin() {
       if (!('webkitSpeechRecognition' in window)) {
