--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(-45deg, #0f172a, #2563eb, #9333ea, #0ea5e9);
+  background: linear-gradient(-45deg, #234696, #5984e0, #064727, #05196f);
   background-size: 400% 400%;
   animation: gradientMove 10s ease infinite;
   z-index: -1;
@@ -61,12 +61,12 @@
   border: none;
   border-radius: 8px;
   font-size: 16px;
-  background: rgba(255, 255, 255, 0.15);
-  color: #fff;
+  background: rgba(255, 255, 255, 0.664);
+  color: #140a0a;
   transition: background 0.3s;
 }
 .signup-form input:focus {
-  background: rgba(255, 255, 255, 0.25);
+  background: rgb(255, 255, 255);
   outline: none;
 }
 
@@ -92,8 +92,10 @@
   margin-top: 15px;
 }
 .note a {
-  color: #38bdf8;
+  color: #070e43;
   text-decoration: none;
+  font-size: 18px;
+    font-weight: bold;
 }
 .note a:hover {
   text-decoration: underline;
@@ -123,7 +125,7 @@
   text-align: left;
 }
 .features div {
-  background: rgba(255, 255, 255, 0.05);
+  background: rgba(252, 245, 245, 0.05);
   padding: 20px;
   border-radius: 10px;
 }
