--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Luna - Welcome</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="splash-body">
   <div class="splash-container">
-    <img src="https://i.imgur.com/8KlT8jJ.png" alt="Luna Logo" class="splash-logo">
-    <h1>Welcome to <span class="luna">Luna</span></h1>
-    <p>Your personal voice AI assistant</p>
+    <img src="https://i.imgur.com/8KlT8jJ.png" alt="Luna Logo" class="splash-logo animate-logo">
+    <h1 class="fade-in slide-up">Welcome to <span class="luna">Luna</span></h1>
+    <p class="fade-in delay-1">Your personal voice AI assistant</p>
+    <div class="loading-dots fade-in delay-2">
+      <span>.</span><span>.</span><span>.</span>
+    </div>
   </div>
  
   <script>
-    // Redirect to login page after 3 seconds
     setTimeout(() => {
       window.location.href = "login.html";
     }, 5000);
